--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,6 +4,11 @@
   <strong>Name:</strong>
   <%= @list.name %>
 </p>
-
+<h3>Tasks:</h3>
+<% @tasks.each do |t| %>
+  <p><%= t.steps %></p>
+<% end %>
+<%#= render 'tasks/form' %>
+<%= link_to 'New Task', new_list_task_path(@list) %>
 <%= link_to 'Edit', edit_list_path(@list) %> |
 <%= link_to 'Back', lists_path %>
